--- a/.htaccess
+++ b/.htaccess
@@ -29,12 +29,13 @@ DirectoryIndex index.php
   </FilesMatch>
   Header unset ETag
   Header unset Last-Modified
+  Header set Cross-Origin-Opener-Policy "same-origin"
 </IfModule>
 
-php_flag display_startup_errors off
-php_flag display_errors off
-php_flag html_errors off
-php_flag log_errors off
+php_flag display_startup_errors on
+php_flag display_errors on
+php_flag html_errors on
+php_flag log_errors on
 
 <IfModule mod_rewrite.c>
 RewriteEngine on
