--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "vlucas/phpdotenv": "^5.6",
         "monolog/monolog": "^3.5",
         "phpstan/phpstan": "^1.10",
-        "pestphp/pest": "^2.30"
+        "pestphp/pest": "^2.30",
+        "google/apiclient": "^2.15"
     },
     "autoload": {
         "psr-4": {
